fixing some layout issues

--- a/_includes/theme.css
+++ b/_includes/theme.css
@@ -36,6 +36,10 @@ body {
 	margin: 0;
   padding: 0;
   background: #3ACCCC;
+  height: 100%;
+}
+html {
+  height: 100vh;
 }
 footer {
 	text-align: center;
@@ -107,10 +111,16 @@ dd :first-child {
    height: 200px;
    margin: auto;
    position: absolute;
-   bottom: 160px;
-   left: 260px;
+   bottom: 0;
+   left: 15vw;
    border-radius: 50%;
    box-shadow: 0 0 200px rgba(255,255,255, 0.8);
+ }
+
+ @media (max-width: 1180px) {
+  .sun, .hills-wrapper {
+    display: none;
+  }
  }
  
  .hills-wrapper {
@@ -125,12 +135,12 @@ dd :first-child {
  }
  
  .hill-background {
-   height: 40%;
+   height: 20%;
    border-radius: 175% 0 0 0;
  }
  
  .hill-foreground {
-   height: 28%;
+   height: 12%;
    border-radius: 0 280% 0 0;
  }
  
